# Reflex-Mind-Map

./: .gitignore  Algo.hs  DataModel.hs  Event.hs  MindMap.hs  MyWidget.hs  main.hs  reflex-mind-map.cabal  style.css
main.jsexe/: out.js  out.stats
src/: Algo.hs  Controller.hs  Data.hs  Lib.hs  View.hs  style.css
