name: reflex-mind-map
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
synopsis: TODO
description: TODO
category: TODO
author: Divam Narula <dfordivam@gmail.com>
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/dfordivam/reflex-mind-map

library
  hs-source-dirs:      src
  exposed-modules:
      Lib

  other-modules:
      Data
      View

  build-depends:
      base
    , text
    , time
    , transformers
    , lens
    , ghcjs-dom
    --, haskell-src-exts >= 1.16 && < 1.18
    , reflex
    , reflex-dom
    , containers == 0.5.*
    --, safe == 0.3.*
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

  if impl(ghcjs)
    build-depends: ghcjs-base

executable reflex-mind-map
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
  build-depends:
      base
    , reflex-mind-map -any
    --, aeson
    --, time
    --, haskell-src-exts >= 1.16 && < 1.18
    --, reflex
    --, reflex-dom
    --, containers == 0.5.*
    --, safe == 0.3.*
  default-language:    Haskell2010
